--- a/Coin/JobSchedulerSample-master/app/src/main/AndroidManifest.xml
+++ b/Coin/JobSchedulerSample-master/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.pedromassango.jobschedulersample">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:usesCleartextTraffic="true"
